notebook-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: notebook
  labels:
    name: notebook
