notebook-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: notebook-ingress
  namespace: notebook
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/ssl-redirect: "false"

spec:
  rules:
  - http:
      paths:
      - path: /api
        pathType: Prefix
        backend:
          service:
            name: notebook-api-service
            port:
              number: 5000
      - path: /
        pathType: Prefix
        backend:
          service:
            name: notebook-client-service
            port:
              number: 80
